src/styles/globals.css
@import "tailwindcss";
@import "./components/components.css";
@import "./dsfr/dsfr.css";

@plugin "tailwindcss-animate";

@plugin "@tailwindcss/typography";

@plugin "daisyui" {
  themes:
    light --default,
    dark --prefersdark;
  root: ":root";
  logs: false;
}

@theme {
  --color-base-400: #cecece;
  --color-base-title: #161616;
  --color-primary-high: #1212ff;
  --color-primary-low: #2323ff;
  --color-primary-subtle: #cacafb;
  --color-primary-subtle-high: #c1c1fb;
  --color-primary-subtle-low: #adadf9;
  --color-info-low: #f5f5fe;
  --color-input: #eeeeee;
  --color-navbar: #ffffff;
  --color-focus: #0b76f6;
  --bage-padding-y: 0rem;
  --bage-padding-x: 0.3rem;
  --bage-radius: 0.2rem;
  --tag-padding-y: 0.25rem;
  --tag-padding-x: 0.75rem;
  --tag-radius: 1rem;
  --card-p: 1.25rem 1rem;
  --indicator-x: 4px;
  --indicator-y: -4px;
}

@plugin "daisyui/theme" {
  name: "light";
  default: true;
  --color-base-100: #ffffff;
  --color-base-200: #dddddd;
  --color-base-300: #f6f6f6;
  --color-base-400: #cecece;
  --color-base-title: #161616;
  --color-base-content: #3a3a3a;
  --color-primary-content: #f5f5fe;
  --color-primary: #000091;
  --color-primary-high: #1212ff;
  --color-primary-low: #2323ff;
  --color-primary-subtle: #e3e3fd;
  --color-primary-subtle-high: #c1c1fb;
  --color-primary-subtle-low: #adadf9;
  --color-success: #b8fec9;
  --color-success-content: #18753c;
  --color-error: #ffe9e9;
  --color-error-content: #ce0600;
  --color-info: #e8edff;
  --color-info-content: #0163cb;
  --color-info-low: #f5f5fe;
  --color-accent-content: #666666;
  --color-secondary: #e1000f;
  --color-neutral: #666666;
  --color-input: #eeeeee;
  --color-navbar: #ffffff;
  --color-focus: #0b76f6;
  --radius-selector: 0.25rem;
  --radius-box: 0.25rem;
  --text-sm--line-height: 1.5rem;
  --text-xl--line-height: 2rem;
  --depth: 0;
}

@plugin "daisyui/theme" {
  name: "dark";
  default: true;
  --color-base-100: #161616;
  --color-base-200: #353535;
  --color-base-300: #343434;
  --color-base-400: #3a3a3a;
  --color-base-title: #ffffff;
  --color-base-content: #cecece;
  --color-primary: #8585f6;
  --color-primary-content: #000091;
  --color-primary-high: #b1b1f9;
  --color-primary-low: #c6c6fb;
  --color-primary-subtle: #21213f;
  --color-primary-subtle-high: #424275;
  --color-primary-subtle-low: #56568c;
  --color-success: #19271d;
  --color-success-content: #27a658;
  --color-error: #391c1c;
  --color-error-content: #ff5655;
  --color-info: #1d2437;
  --color-info-content: #3c85fd;
  --color-info-low: #21213f;
  --color-accent-content: #929292;
  --color-secondary: #e1000f;
  --color-neutral: #929292;
  --color-input: #242424;
  --color-navbar: #1e1e1e;
  --color-focus: #0b76f6;
  --radius-selector: 0.25rem;
  --radius-box: 0.25rem;
  --text-sm--line-height: 1.5rem;
  --text-xl--line-height: 2rem;
  --depth: 0;
}

